...
                        Spacer()
                    }
                    .listRowBackground(Color.clear)
                }
                
                Section(header: Text("Личные данные")) {
                    TextField("Имя", text: $firstName)
                    TextField("Фамилия", text: $lastName)
                    TextField("Имя пользователя (ник)", text: $username)
                        .autocapitalization(.none)
                }
            }
            .listStyle(.insetGrouped)
...
                ToolbarItem(placement: .cancellationAction) {
                    Button("Отмена") {
                        dismiss()
                    }
                }
                ToolbarItem(placement: .confirmationAction) {
                    Button("Сохранить") {
                        profileManager.firstName = firstName
                        profileManager.lastName = lastName
                        profileManager.username = username
                        if let newAvatar = avatarData {
                            profileManager.avatarData = newAvatar
                        }
...
